Add Clear board and Change size functionality, clear code

--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
     <body>
         <div id="top-container">
             <h1>Etch-a-sketch</h1>
-            <div>
-                <button id="clear-btn">Clear</button>
+            <div id="clear-board">
+                <button id="clear-btn">Clear the board</button>
             </div>
-            <div>
-                <label for="size-list">Choose a size:</label>
+            <div id="change-size">
+                <!-- <label for="size-list">Choose a size:</label> -->
                 <select id="size-list">
                     <option value="16">16</option>
                     <option selected value="32">32</option>
                     <option value="64">64</option>
                     <option value="90">90</option>
                 </select>
+                <button id="change-btn">Change size</button>
             </div>
         </div>
 
